# skillr

./: Cargo.toml
docs/superpowers/plans/: 2026-03-26-skillr-implementation.md
docs/superpowers/specs/: 2026-03-26-skillr-design.md
src/: agents.rs  config.rs  lockfile.rs  main.rs  util.rs  wizard.rs
src/market/: browse.rs  cache.rs  manage.rs  mod.rs
src/mcps/: add.rs  list.rs  mod.rs  patch.rs  registry.rs  remove.rs  sync.rs
src/skills/: install.rs  list.rs  mod.rs  remove.rs  sync.rs
