[package]
name = "skillr"
version = "0.1.0"
edition = "2024"
description = "Unified AI agent skill & MCP manager"

[dependencies]
inquire = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
console = "0.15"
indicatif = "0.17"
dirs = "6"
git2 = "0.20"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
pathdiff = "0.2"
